# cppfetch

./: .gitignore  .travis.yml  .travis_build.sh  CMakeLists.txt  README.md  build-static  distro.cpp  functions.h  main.cpp  meson.build  xmake.lua
src/: cpu.cpp  distro.cpp  environment.cpp  functions.cpp  functions.h  functions.hpp  main.cpp  main.h  main.hpp  memory.cpp  music.cpp  packages.cpp  packages.hpp  term.cpp  uptime.cpp
src/helpers/: functions.hpp
src/info/: cpu.cpp  distro.cpp  environment.cpp  memory.cpp  packages.cpp  packages.hpp  term.cpp  uptime.cpp
