project('cppfetch', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++2a'])

executable('cppfetch',
           'src/distro.cpp',
           'src/environment.cpp',
           'src/functions.cpp',
           'src/main.cpp',
           'src/uptime.cpp',
           install : true)
